# crabbox

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  config.example.toml  justfile
.github/workflows/: rust.yml
src/: commands.rs  config.rs  crabbox.rs  glob.rs  gpio.rs  main.rs  pipe.rs  player.rs  rfid.rs  state.rs  tag.rs  web.rs
src/web/: edit_tag.rs  index.rs  library.rs  mod.rs  upload.rs
templates/: edit_tag.html  footer.html  index.html  library.html  upload.html
