[package]
name = "crabbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["rpi"]
rpi = ["rppal"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0"
rand = "0"
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"] }
axum = "0"
libc = "0"
rodio = { version = "0", default-features = true }
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt"] }
rppal = { version = "0", optional = true }
