[package]
name = "crabbox"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "GPIO & RFID controlled jukebox for RaspberryPi"
build = "build.rs"

[features]
default = ["rpi"]
rpi = ["rppal"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
toml_edit = "0"
rand = "0"
walkdir = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs"] }
axum = { version = "0", features = ["multipart"] }
libc = "0"
rodio = { version = "0", default-features = true }
tracing = "0"
tracing-subscriber = { version = "0", features = ["fmt"] }
rppal = { version = "0", optional = true }
regex = "1"
chrono = { version = "0", default-features = false, features = ["clock"] }
minijinja = "2"

[dev-dependencies]
tempfile = "3"
